cluster/config/cilium/hubble-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hubble-ui
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/auth-url: https://authentik.kube.home/outpost.goauthentik.io/auth/nginx
    # nginx.ingress.kubernetes.io/auth-signin: https://test.kube.home/outpost.goauthentik.io/start?rd=$host$uri
    # nginx.ingress.kubernetes.io/auth-response-headers: Set-Cookie,X-authentik-username,X-authentik-groups,X-authentik-email,X-authentik-name,X-authentik-uid
    # nginx.ingress.kubernetes.io/auth-snippet: proxy_set_header X-Forwarded-Host $http_host;
spec:
  rules:
  - host: hubble.kube.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hubble-ui
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hubble-ui
  namespace: authentik
  annotations:
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/auth-url: https://authentik.kube.home/outpost.goauthentik.io/auth/nginx
    # nginx.ingress.kubernetes.io/auth-signin: https://test.kube.home/outpost.goauthentik.io/start?rd=$host$uri
    # nginx.ingress.kubernetes.io/auth-response-headers: Set-Cookie,X-authentik-username,X-authentik-groups,X-authentik-email,X-authentik-name,X-authentik-uid
    # nginx.ingress.kubernetes.io/auth-snippet: proxy_set_header X-Forwarded-Host $http_host;
spec:
  rules:
  - host: hubble.kube.home
    http:
      paths:
      - path: /outpost.goauthentik.io
        pathType: Prefix
        backend:
          service:
            name: authentik
            port:
              name: http
